2012-05-22  H.J. Lu  <hongjiu.lu@intel.com>

	* time/mktime.c: Update copyright years.

2012-05-22  Paul Eggert  <eggert@cs.ucla.edu>

	mktime: merge comment-quoting-style change from gnulib
	* time/mktime.c: Quote 'like this' in comments.
	The GNU coding standards suggest that we no longer quote `like this',
	as "`" and "'" are typically rendered asymmetrically nowadays.
	The typical gnulib style is to quote 'like this' when quoting
	code, and "like this" when quoting English.

	* time/mktime.c (compile-command): Add "-I.".

	mktime: merge mktime-internal.h change from gnulib
	* time/mktime.c [!_LIBC]: Include "mktime-internal.h".

	mktime: merge time_r change from gnulib
	* time/mktime.c [!_LIBC]: Do not include "time_r.h".

	mktime: merge DEBUG change from gnulib
	* time/mktime.c (mktime) [DEBUG]: #undef before #define-ing, in
	case system <time.h> has a #define.

	mktime: merge <sys/types.h> change from gnulib
	* time/mktime.c: Do not include <sys/types.h>; no longer needed,
	since <time.t> is now guaranteed to define time_t.

	mktime: merge HAVE_CONFIG_H change from gnulib
	* time/mktime.c: Include <config.h> if !_LIBC, not if HAVE_CONFIG_H.

2012-05-22  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/sysdep.h (SYSCALL_SET_ERRNO):
	Use "neg %eax".

	* sysdeps/unix/sysv/linux/bits/resource.h (RLIM_INFINITY): Use
	__rlim_t cast.
	(struct rusage): Use anonymous union to pad each field to
	__syscall_slong_t.

2012-05-21  David S. Miller  <davem@davemloft.net>

	* Makefules (o-iterator): Remove .s cases.
	(compile-command.s): Delete.
	(COMPILE.s): Delete.
	* sysdeps/unix/make-syscalls.sh: Remove .s file tests.

2012-05-21  Joseph Myers  <joseph@codesourcery.com>

	* configure.in (libc_cv_predef_stack_protector): Only consider
	"foobar" and "__stack_chk_fail" lines in libc_undefs.
	* configure: Regenerated.

2012-05-21  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/sysdep.h (SYSCALL_SET_ERRNO):