@@ -1,5 +1,8 @@
 2012-05-22  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* sysdeps/unix/sysv/linux/i386/sysdep.h (SYSCALL_ERROR_HANDLER):
+	Use "neg %eax".
+
 	* time/mktime.c: Update copyright years.
 
 2012-05-22  Paul Eggert  <eggert@cs.ucla.edu>
